// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with icon chosen in cms 1`] = `
.c1 {
  position: relative;
  clear: both;
  background: #f7f7f7;
  padding: 20px;
  margin-bottom: 40px;
  border-left: 4px solid;
  border-color: #ea232d;
}

.c3 {
  display: inline-block;
}

.c3 > :last-child {
  margin-bottom: 0;
}

.c3 p:last-of-type {
  margin-bottom: 0;
}

.c2 {
  fill: #212122;
  width: 30px;
  height: 30px;
  margin-right: 1em;
  display: inline-block;
  vertical-align: top;
}

.c2 + div {
  width: calc(100% - 3em);
}

.c0 {
  max-width: 1140px;
  margin: 0 auto;
  padding: 0 20px;
}

.c4 ul {
  padding-left: 0;
  list-style: none;
}

.c4 ul li {
  position: relative;
  padding-left: 40px;
}

.c4 ul li::before {
  content: ' ';
  position: absolute;
  top: 8px;
  left: 10px;
  display: block;
  width: 10px;
  height: 10px;
  background: #212122;
}

.c4 ul li ul {
  padding-left: 0;
  list-style: none;
}

.c4 ul li ul li:before {
  background: transparent;
  border: 1px solid #212122;
}

.c4 ol li::before {
  min-width: 10px;
}

.c4 blockquote {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-right: 20px;
  margin-bottom: 0;
  padding: 60px 20px 20px 20px;
  border-left: 4px solid #ea232d;
  font-size: 1.35em;
  font-weight: 300;
}

.c4 blockquote:before {
  content: '';
  display: block;
  position: absolute;
  width: 30px;
  height: 30px;
  background-image: url(test-file-stub);
  top: 10px;
  left: 20px;
  color: #ea232d;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="isvg loading c2"
    />
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <p>
          Some body text
        </p>
        <h2>
          Some header text
        </h2>
        <p>
          <b>
            some bollld text
          </b>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with no options chosen in cms 1`] = `
.c1 {
  position: relative;
  clear: both;
  background: #f7f7f7;
  padding: 20px;
  margin-bottom: 40px;
  border-left: 4px solid;
  border-color: #ea232d;
}

.c2 {
  display: inline-block;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c2 p:last-of-type {
  margin-bottom: 0;
}

.c0 {
  max-width: 1140px;
  margin: 0 auto;
  padding: 0 20px;
}

.c3 ul {
  padding-left: 0;
  list-style: none;
}

.c3 ul li {
  position: relative;
  padding-left: 40px;
}

.c3 ul li::before {
  content: ' ';
  position: absolute;
  top: 8px;
  left: 10px;
  display: block;
  width: 10px;
  height: 10px;
  background: #212122;
}

.c3 ul li ul {
  padding-left: 0;
  list-style: none;
}

.c3 ul li ul li:before {
  background: transparent;
  border: 1px solid #212122;
}

.c3 ol li::before {
  min-width: 10px;
}

.c3 blockquote {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-right: 20px;
  margin-bottom: 0;
  padding: 60px 20px 20px 20px;
  border-left: 4px solid #ea232d;
  font-size: 1.35em;
  font-weight: 300;
}

.c3 blockquote:before {
  content: '';
  display: block;
  position: absolute;
  width: 30px;
  height: 30px;
  background-image: url(test-file-stub);
  top: 10px;
  left: 20px;
  color: #ea232d;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <p>
          Some body text
        </p>
        <h2>
          Some header text
        </h2>
        <p>
          <b>
            some bollld text
          </b>
        </p>
      </div>
    </div>
  </div>
</div>
`;
